<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_movies"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/movies"
            android:text="@string/movies"
            android:textColor="@color/colorText"
            android:textSize="48sp" />

        <Button
            android:id="@+id/bt_tv_shows"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/tv_shows"
            android:text="@string/tv_shows"
            android:textColor="@color/colorText"
            android:textSize="48sp" />

        <Button
            android:id="@+id/bt_search"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/search"
            android:text="@string/search"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="48sp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>